--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
         "phaser": "^3.55.2",
         "phaser-ce": "^2.18.0",
         "throttle-debounce": "^3.0.1",
-        "webfontloader": "^1.6.28"
+        "webfontloader": "^1.6.28",
+        "socket.io": "^2.2.0",
+        "socket.io-client": "^2.2.0"
     },
     "cordova": {
         "platforms": [
