--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,19 @@
 node_modules/
-www/
-platforms/
-plugins/
 dist/
-.vscode/
-*.log
-/index.html
 build/
-.env
-yarn.lock
-package-lock.json
+dev/
+.vscode/
+.idea
+*.log
+src_old
+*.old.js
+phaserTilemapfix
+*.zip
+legacy*
+*.txt
+dump/
+*.docx
+*.patch
+*.bak*
+*.old*
+higherVolume/
